--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -62,6 +62,10 @@
                 </div>
 
             -->
+            <button data-toggle="collapse" data-target="#exam">Start Exam</button>
+            <br>
+            <div id="exam" class="collapse">
+              {% if user.is_authenticated %}
 
             <!-- <HINT> If user is authenticated, show course exam with a list of question -->
 
@@ -75,7 +79,7 @@
             <input type="check" name="choice_{{choice.id}}" id="{{choice.id}}" ...>
             -->
 
-            <!-- A choice submission form example
+            <!-- A choice submission form example-->
             <form id="questionform" action="point to a submit view" method="post">
                         ... for each question in the course ...
                         <div class="card mt-1">
@@ -93,10 +97,24 @@
                             </div>
                         </div>
                     <input class="btn btn-success btn-block" type="submit" value="Submit">
-            </form> -->
+            </form> 
 
             <!--Check here to see more details Bootstrap checkbox
              https://www.w3schools.com/bootstrap4/bootstrap_forms_inputs.asp-->
+             {% else %}
+             <li>
+                 <form class="form-inline" action="{% url 'onlinecourse:login' %}" method="post">
+                     {% csrf_token %}
+                     <div class="input-group">
+                         <input type="text" class="form-control" placeholder="Username" name="username" >
+                         <input type="password" class="form-control" placeholder="Password" name="psw" >
+                         <button class="btn btn-primary" type="submit">Login</button>
+                         <a class="btn btn-link" href="{% url 'onlinecourse:registration' %}">Sign Up</a>
+                     </div>
+                 </form>
+             </li>
+         {% endif %}
+         </div> 
     </div>
 </body>
 </html>
